Simplified a couple lines of code in call_shows() and get_shows() regarding when the datetime string gets formatted. It now gets formatted in get_shows() rather than being processed in call_shows(), so it gets formatted before it gets returned to main.py.

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,11 +112,6 @@
         margin: auto;
     }
 
-    @media screen and (max-height: 450px) {
-      .sidenav {padding-top: 15px;}
-      .sidenav a {font-size: 18px;}
-    }
-
     img {
         max-width: 100%;
         height: auto;
@@ -159,6 +154,12 @@
         background-color: white;
         color: black;
     }
+
+    #mapView {
+        display: none;
+    }
+
+
     </style>
 </head>
 
