I have no idea what I did to the main program, but it still works so let's just bookmark this...

--- a/templates/About.html
+++ b/templates/About.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <title>About Next Up</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+
+        div {
+            border: 1px solid black;
+            max-width: 500px;
+            margin: auto;
+        }
+
+        .box {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-  <h1>Next Up, Seattle</h1>
-  <p>Copywrite 2024, Bobcat Blue</p>
+    <h1>About Next Up</h1>
+    <p>Developed by Chris Downing, 2024/2025</p>
+    <br><br>
+    <div>
+        <p class="box">Hello Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
+            any given stage in Seattle.  If you want to see more of what Seattle's music scene has to offer,
+            then this is the tool for you.  The list updates every day and will show you the next event
+            on each of our local venues' calendars, as well as those of Seattle's large arena venues.
+        </p>
+    </div>
+
 </body>
 </html>
