--- a/templates/About.html
+++ b/templates/About.html
@@ -1,41 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>About Next Up</title>
-    <style>
-        h1 {
-            text-align: center;
-        }
+{% extends "base.html" %}
 
-        p {
-            text-align: center;
-        }
+{% block title %}About Us{% endblock %}
 
-        div {
-            border: 1px solid black;
-            max-width: 500px;
-            margin: auto;
-        }
-
-        .box {
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <h1>About Next Up</h1>
-    <p>Developed by Chris Downing, 2024/2025</p>
-    <br><br>
-    <div>
-        <p class="box">Hello Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
-            any given stage in Seattle.  If you want to see more of what Seattle's music scene has to offer,
-            then this is the tool for you.  The list updates every day and will show you the next event
-            on each of our local venues' calendars, as well as those of Seattle's large arena venues.
-        </p>
-    </div>
-
-</body>
-</html>
+{% block content %}
+<h1>About Next Up</h1>
+<p style="text-align: center;">Developed by Chris Downing, 2024/2025</p>
+<br><br>
+<div>
+    <p class="box">Hello Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
+        any given stage in Seattle.  If you want to see more of what Seattle's music scene has to offer,
+        then this is the tool for you.  The list updates every day and will show you the next event
+        on each of our local venues' calendars, as well as those of Seattle's large arena venues.
+    </p>
+</div>
+{% endblock %}
