Small update to the About page.

--- a/templates/About.html
+++ b/templates/About.html
@@ -3,12 +3,15 @@
 {% block title %}About Us{% endblock %}
 
 {% block content %}
+
 <h1>About Next Up</h1>
-<p style="text-align: center;">Developed by Chris Downing, 2024/2025</p>
+<p style="text-align: center;">Developed by Chris Downing,
+    <br>The Headlands Co., 2024/2025</p>
 <br><br>
-<div>
-    <p class="box">Hello Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
-        any given stage in Seattle.  If you want to see more of what Seattle's music scene has to offer,
+<div style="max-width: 600px; font-size: 20px;">
+    <p class="box">Hello, Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
+        any given stage in Seattle.
+        <br><br>If you want to see more of what Seattle's music scene has to offer,
         then this is the tool for you.  The list updates every day and will show you the next event
         on each of our local venues' calendars, as well as those of Seattle's large arena venues.
     </p>
