Minor adjustment to the text on the main and About pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 
 {% block content %}
 <h1 style="font-family: 'Lobster Two'; font-size: 45px; text-align: center;">Next Up...Seattle!</h1>
-<br><br><br>
+<br>
+<p style="text-align: center;">Find the next local concert at any given stage in Seattle. <br><br> More venues coming soon!</p>
+<br>
 
 <div class="toggle-container">
     <div id="listButton" class="toggle-button active" onclick="toggleView('list')">List</div>
@@ -44,6 +46,7 @@
 </div>
 
 <div id="mapView" class="view" style="display: none;">
+    <p>Map-view is still under development, but will be up and running soon.  Feel free to play around with the map in the meantime :)</p>
     <div style="max-width: 550px; max-height: 600px; margin: auto; border: 5px solid black; overflow: hidden; background-color: #E1E1E1">
         <svg width="695" height="929" viewBox="0 0 695 929" fill="none" xmlns="http://www.w3.org/2000/svg" id="map-svg">
             <style>
