Added Tractor Tavern, Madame Lou's to cron job.  Moved Nuemos off of TM API dependency

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,9 @@
 </div>
 
 <div id="mapView" class="view" style="display: none;">
-    <p>Map-view is still under development, but will be up and running soon.  Feel free to play around with the map in the meantime :)</p>
+    <div>
+        <p>Map-view is still under development, but will be up and running soon.  Feel free to play around with the map in the meantime :)</p>
+    </div>
     <div style="max-width: 550px; max-height: 600px; margin: auto; border: 5px solid black; overflow: hidden; background-color: #E1E1E1">
         <svg width="695" height="929" viewBox="0 0 695 929" fill="none" xmlns="http://www.w3.org/2000/svg" id="map-svg">
             <style>
