--- a/templates/Contact Us.html
+++ b/templates/Contact Us.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <br><br><br><br><br><br><br><br>
-<h1 style="text-align: center;">Don't.</h1>
+<h1 style="text-align: center;">Email us at <b>NextUpSeattle@protonmail.com</b></h1>
 <br>
 <h1 style="text-align: center;">:-)</h1>
 <br>
