Final commit before MAJOR REFACTOR

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <br>
 
     {% for key, info in dictionary.items() %}
-    <div>
+    <div class="showInfo">
         <ul>
             <li style="text-align: left;">
                 <a href="{{info[0]}}">{{key}}</a>
